# Teacher-Assistant-Workspace

./: .env.example  .gitignore  README.md  collect_env_files.sh  docker-compose.dev.yml  docker-compose.yml  metadata.json  schema-reset.sql  schema.sql  server.ts  vercel.json
.agents/: AGENTS.md
.antigravity/: 93e1ccc4-7456-41d5-85b9-b1ed96d91d9d.pbtxt  ca7a542c-e1b4-46b4-971a-f9d358da5a4e.pbtxt
alternative-host/: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/src/server/: router.py
backend/src/service/: chat.py
backend/src/types/: schemas.py
frontend/: .env.example  .gitignore  Dockerfile  default.conf.template  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  defaultData.ts  index.css  mockChat.ts  types.ts
frontend/src/components/: AccountModals.tsx  AuthPage.tsx  ClassApp.tsx  ClassDetails.tsx  CommandPalette.tsx  CreateClassModal.tsx  CustomDialogs.tsx  FuzzyAutocompleteField.tsx  InstituteAutocompleteField.tsx  LandingPage.tsx  RAGClass.tsx  RAGWorkspace.tsx  Sidebar.tsx  StudentRegister.tsx  Visualizer.tsx  WorkspaceApp.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: supabase.ts
src/: App.tsx  defaultData.ts  index.css  types.ts
src/components/: CommandPalette.tsx  RAGWorkspace.tsx  Sidebar.tsx  StudentRegister.tsx  WorkspaceDetails.tsx
