[project]
name = "teacher-assistant-backend"
version = "0.1.0"
description = "FastAPI backend using LangChain & OpenRouter"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.8",
    "pydantic-settings>=2.14.2",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "basedpyright>=1.38.3",
    "poethepoet>=0.25.0",
    "uvicorn>=0.28.0",
]

[tool.poe.tasks]
run-dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
lint = { shell = "ruff check . && basedpyright ." }
format = "ruff format ."

[tool.uv]
package = false
